--- a/css/home.css
+++ b/css/home.css
@@ -61,7 +61,7 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.65); /* Adjust the opacity here */
+    background-color: rgba(0, 0, 0, 0.65);
     z-index: -1;
 }
 
