New: Added auto adjustments of windowing according to the most common mobile width sizes

--- a/css/home.css
+++ b/css/home.css
@@ -86,3 +86,15 @@ img {
     padding: 30px;
     border-radius: 23px;
 }
+
+@media (max-width: 600px) {
+    .background-hover {
+        zoom: 50%;
+    }
+}
+
+@media (max-width: 900px) {
+    .background-hover {
+        zoom: 90%;
+    }
+}
