--- a/css/movie.css
+++ b/css/movie.css
@@ -186,12 +186,19 @@ iframe {
 }
 
 .movie-standalone-poster {
+    transition-duration: .25s;
     margin-left: 30px;
 }
 
-.movie-standalone-poster img:hover {
-    color: #FB3570; box-shadow: 0 0 80px #FB3570;
+.movie-standalone-poster:hover img {
+    transform: scale(1.07);
+    color: #FB3570;
+    box-shadow: 0 0 45px #FB3570;
     transition: all 0.3s ease-in-out;
-    transform: scale(1.05);
-    -webkit-transform: scale(1.05);
+}
+
+.movie-standalone-poster img {
+    transition: all 0.3s ease-in-out;
+    width: 100%;
+    border-radius: 10px;
 }
